--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -201,10 +201,7 @@ footer {
 }
 
 .icon-bar {
-	font-size: 1.3em;
 	position: absolute;
-	width: 100%;
-	height: 150px;
 	text-align: center;
 	font-family: $header-font;
 	bottom: 75px;
@@ -216,24 +213,24 @@ footer {
 	@include respond-to(wide-screens) {
 		bottom: 50px;
 	}
-	icon-bar_borders {
-		left: 50%;
-	    transform: translatex(-50%);
-	    -webkit-transform: translatex(-50%);
-	    position: absolute;
-	    height: 100%;
-	    width: 720px;
-	}
-	&__title-wrapper {
+	&__borders {
+      left: 50%;
+      transform: translatex(-50%);
+      -webkit-transform: translatex(-50%);
+      position: absolute;
+      height: 100%;
+      width: 720px;
+  	}
+	&__wrapper {
 		top: 50%;
-	    transform: translateY(-50%);
-	    -webkit-transform: translateY(-50%);
-      	position: relative;
-      	height: 54px;
-      	width: 75%;
-		@include flex-wrapper;
-		margin: 0 auto 0 auto;
-		height: 100%;
+      transform: translateY(-50%);
+      -webkit-transform: translateY(-50%);
+        position: relative;
+        height: 54px;
+        width: 75%;
+	    @include flex-wrapper;
+	    margin: 0 auto 0 auto;
+	    height: 100%;
 		@include respond-to(handhelds) {
 			width: 90%;
 		}
@@ -244,7 +241,16 @@ footer {
 			width: 40%;
 		}
 	}
-	&__title-item {
+	&__item {
+		transition-duration: 1s;
+        font-family: 'Futura';
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        margin-left: 5%;
+        margin-right: 5%;
+		border-radius: 50%;
+        border: 4px solid white;
 		margin: 0 10px 0 10px;
 		flex: 1;
 	}
@@ -256,17 +262,17 @@ footer {
 		width: 100%;
 		padding-bottom: 100%;
 	}
-	&__title{
+	&__text{
 		margin: 10px 0 0 0;
 	}
 	@each $color, $hex in $colors-list {
 		&__image--#{$color} {
 			background-image: url($img-path + "cmyk-" + $color + ".png");
 		}
-		&__image--#{$color}:hover {
+		&__image:hover {
 			background-image: url($img-path + "cmyk-" + $color + "-active.png");
 		}
-		&__title--#{$color} {
+		&__text {
 			color: $hex;
 		}
 	}
