--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -23,6 +23,7 @@ $logo-light: 'TAG_white_1920x1080.png';
 $homepage-bg: 'TAG-The-Agency-website-homepage-bg.png';
 $production-bg: 'TAG-The-Agency-website-production-bg.png';
 $home-icon: 'TAG The Agency website case studies buttons-56.png';
+$home-icon-light: 'home-icon-white.png';
 $play-icon:'play-icon.png';
 $blue: #00AEEF;
 $pink: #EC008C;
@@ -410,6 +411,9 @@ footer {
 				-ms-transform: rotate(180deg); /* IE 9 */
 			    -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
 			    transform: rotate(180deg);
+			}
+			&--light {
+				background-image: url($img-path + $home-icon-light);
 			}
 		}
 	}
