--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -196,6 +196,15 @@ footer {
     .float-right {
       width: 1250px; } }
 
+.vr-container {
+  height: 100%; }
+  @media only screen and (min-width: 64em) and (max-width: 90em) {
+    .vr-container {
+      width: 760px; } }
+  @media only screen and (min-width: 90em) {
+    .vr-container {
+      width: 1250px; } }
+
 .work-examples {
   color: white;
   float: left;
@@ -282,6 +291,68 @@ footer {
   .copy--light {
     color: white; }
 
+.vr-copy {
+  height: 90%;
+  margin: 0 40px 0 80px; }
+  .vr-copy h1 {
+    font-size: 2.7em;
+    margin: 0 0 30px 0; }
+  .vr-copy h2 {
+    margin: 60px 0 0 0; }
+  .vr-copy p {
+    margin: 0 0 30px 0; }
+  @media only screen and (min-width: 64em) and (max-width: 90em) {
+    .vr-copy {
+      width: 350px; } }
+  @media only screen and (min-width: 90em) {
+    .vr-copy {
+      width: 450px;
+      font-size: 1.2em; } }
+  .vr-copy--light {
+    color: white; }
+
+.vr-icons {
+  position: relative;
+  height: 10%;
+  margin: 0 40px 0 40px; }
+  @media only screen and (min-width: 64em) and (max-width: 90em) {
+    .vr-icons {
+      width: 350px; } }
+  @media only screen and (min-width: 90em) {
+    .vr-icons {
+      width: 600px; } }
+  .vr-icons__icon {
+    float: left;
+    width: 15%;
+    padding-bottom: 15%; }
+  .vr-icons__image {
+    width: 100%;
+    padding-bottom: 100%;
+    background-size: contain;
+    background-position: left;
+    background-repeat: no-repeat;
+    transition-duration: 1s; }
+    .vr-icons__image--home {
+      background-image: url("../imgs/TAG The Agency website case studies buttons-56.png"); }
+      .vr-icons__image--home:hover {
+        -ms-transform: rotate(180deg);
+        /* IE 9 */
+        -webkit-transform: rotate(180deg);
+        /* Chrome, Safari, Opera */
+        transform: rotate(180deg); }
+      .vr-icons__image--home--light {
+        background-image: url("../imgs/home-icon-white.png"); }
+  .vr-icons__text {
+    text-transform: uppercase;
+    font-family: 'Futura';
+    font-weight: bold;
+    width: 100%;
+    text-align: center;
+    top: 100%;
+    margin: 10px 0 0 0; }
+  .vr-icons--light {
+    color: white; }
+
 .icons {
   float: right;
   position: relative;
@@ -355,17 +426,31 @@ footer {
       background-position: center;
       background-image: url("../imgs/play-icon.png"); }
 
+.vr-content #description-header {
+  font-family: 'Futura';
+  font-size: 27px;
+  font-weight: bold; }
+
+.vr-content #text-column {
+  font-family: 'Futura Light';
+  font-size: 15px;
+  width: 330px;
+  margin: 40px 0 0 80px;
+  color: #FFF; }
+
 #description-header {
   font-family: 'Futura';
   font-size: 27px;
   font-weight: bold; }
 
+.strategy-content #text-column {
+  color: #000; }
+
 #text-column {
   font-family: 'Futura Light';
   font-size: 15px;
   width: 330px;
-  margin: 40px 0 0 80px;
-  color: #000; }
+  margin: 40px 0 0 80px; }
 
 #content {
   width: 330px;
@@ -376,6 +461,8 @@ footer {
   background-color: #FFF200;
   width: 75%;
   margin: 0 200px;
-  padding: 25px; }
+  padding: 25px;
+  display: block;
+  clear: both; }
 
 /*# sourceMappingURL=style.css.map */
