add background and header to strategy page

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -65,6 +65,8 @@ footer {
     background-image: url("../imgs/TAG-The-Agency-website-production-bg.png"); }
   .background--influencers {
     background-image: url("../imgs/TAG-The-Agency-website-influencers-bg.png"); }
+  .background--strategy {
+    background-image: url("../imgs/TAG-The-Agency-website-thinking-strategy-bg.png"); }
 
 .nav-top {
   text-transform: uppercase;
