--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -23,6 +23,7 @@ $logo-light: 'TAG_white_1920x1080.png';
 $homepage-bg: 'TAG-The-Agency-website-homepage-bg.png';
 $production-bg: 'TAG-The-Agency-website-production-bg.png';
 $influencers-bg: 'TAG-The-Agency-website-influencers-bg.png';
+$strategy-bg: 'TAG-The-Agency-website-thinking-strategy-bg.png';
 $home-icon: 'TAG The Agency website case studies buttons-56.png';
 $home-icon-light: 'home-icon-white.png';
 $play-icon:'play-icon.png';
@@ -143,6 +144,9 @@ footer {
 	}
 	&--influencers {
 		background-image: url($img-path + $influencers-bg);
+	}
+	&--strategy {
+		background-image: url($img-path + $strategy-bg);
 	}
 }
 
