--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -7,7 +7,7 @@
 @font-face {
   font-family: 'Harriet Bold';
   src: url("../fonts/Harriet Display Bold.otf"); }
-html, body, header, main, footer {
+html, body, header, main {
   overflow: hidden;
   margin: 0 0 0 0;
   box-sizing: border-box;
@@ -23,7 +23,7 @@ h1, h2, h3 {
 p {
   font-family: "Futura Light"; }
 
-header, main, footer {
+header, main {
   position: fixed;
   box-sizing: border-box; }
 
@@ -33,21 +33,10 @@ main {
   width: 100%;
   padding-top: 100px;
   padding-bottom: 100px; }
-  @media only screen and (max-width: 64em) {
-    main {
-      padding-top: 150px; } }
 
 header {
   width: 100%;
   height: 100px; }
-  @media only screen and (max-width: 64em) {
-    header {
-      height: 150px; } }
-
-footer {
-  bottom: 0;
-  height: 100px;
-  width: 100%; }
 
 .background {
   z-index: -1;
@@ -67,6 +56,88 @@ footer {
     background-image: url("../imgs/TAG-The-Agency-website-influencers-bg.png"); }
   .background--strategy {
     background-image: url("../imgs/TAG-The-Agency-website-thinking-strategy-bg.png"); }
+
+.inner-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  clear: both;
+  background-color: purple; }
+  @media only screen and (min-width: 64em) and (max-width: 90em) {
+    .inner-container {
+      width: 960px;
+      height: 470px; } }
+  @media only screen and (min-width: 90em) {
+    .inner-container {
+      width: 1440px;
+      height: 720px; } }
+
+.media {
+  display: inline-block;
+  background-color: blue;
+  height: calc(100% - 20px);
+  width: calc(60% - 20px);
+  margin: 10px 10px 10px 10px; }
+
+.copy {
+  clear: both;
+  float: left;
+  height: calc(80% - 20px);
+  width: calc(40% - 60px);
+  background-color: blue;
+  margin: 10px 50px 10px 10px; }
+  .copy h1 {
+    font-size: 2.7em;
+    margin: 0 0 30px 0; }
+  .copy h2 {
+    margin: 60px 0 0 0; }
+  .copy p {
+    margin: 0 0 30px 0; }
+  @media only screen and (min-width: 90em) {
+    .copy {
+      font-size: 1.2em; } }
+  .copy--light {
+    color: white; }
+
+.icons {
+  clear: both;
+  background-color: blue;
+  float: left;
+  width: calc(40% - 60px);
+  height: calc(20% - 10px);
+  margin: 0 50px 10px 10px; }
+  .icons__icon {
+    float: left;
+    width: 15%;
+    padding-bottom: 15%; }
+  .icons__image {
+    width: 100%;
+    padding-bottom: 100%;
+    background-size: contain;
+    background-position: left;
+    background-repeat: no-repeat;
+    transition-duration: 1s; }
+    .icons__image--home {
+      background-image: url("../imgs/TAG The Agency website case studies buttons-56.png"); }
+      .icons__image--home:hover {
+        -ms-transform: rotate(180deg);
+        /* IE 9 */
+        -webkit-transform: rotate(180deg);
+        /* Chrome, Safari, Opera */
+        transform: rotate(180deg); }
+      .icons__image--home--light {
+        background-image: url("../imgs/home-icon-white.png"); }
+  .icons__text {
+    text-transform: uppercase;
+    font-family: 'Futura';
+    font-weight: bold;
+    width: 100%;
+    text-align: center;
+    top: 100%;
+    margin: 10px 0 0 0; }
+  .icons--light {
+    color: white; }
 
 .nav-top {
   text-transform: uppercase;
@@ -261,70 +332,6 @@ footer {
     .work-examples__color-strip--half-pink {
       background-color: #EC008C; }
 
-.copy {
-  float: right;
-  height: 90%;
-  margin: 0 40px 0 0; }
-  .copy h1 {
-    font-size: 2.7em;
-    margin: 0 0 30px 0; }
-  .copy h2 {
-    margin: 60px 0 0 0; }
-  .copy p {
-    margin: 0 0 30px 0; }
-  @media only screen and (min-width: 64em) and (max-width: 90em) {
-    .copy {
-      width: 350px; } }
-  @media only screen and (min-width: 90em) {
-    .copy {
-      width: 450px;
-      font-size: 1.2em; } }
-  .copy--light {
-    color: white; }
-
-.icons {
-  float: right;
-  position: relative;
-  height: 10%;
-  margin: 0 40px 0 0; }
-  @media only screen and (min-width: 64em) and (max-width: 90em) {
-    .icons {
-      width: 350px; } }
-  @media only screen and (min-width: 90em) {
-    .icons {
-      width: 450px; } }
-  .icons__icon {
-    float: left;
-    width: 15%;
-    padding-bottom: 15%; }
-  .icons__image {
-    width: 100%;
-    padding-bottom: 100%;
-    background-size: contain;
-    background-position: left;
-    background-repeat: no-repeat;
-    transition-duration: 1s; }
-    .icons__image--home {
-      background-image: url("../imgs/TAG The Agency website case studies buttons-56.png"); }
-      .icons__image--home:hover {
-        -ms-transform: rotate(180deg);
-        /* IE 9 */
-        -webkit-transform: rotate(180deg);
-        /* Chrome, Safari, Opera */
-        transform: rotate(180deg); }
-      .icons__image--home--light {
-        background-image: url("../imgs/home-icon-white.png"); }
-  .icons__text {
-    text-transform: uppercase;
-    font-family: 'Futura';
-    font-weight: bold;
-    width: 100%;
-    text-align: center;
-    top: 100%;
-    margin: 10px 0 0 0; }
-  .icons--light {
-    color: white; }
-
 .production-videos {
   float: left;
   width: 75%;
@@ -370,5 +377,13 @@ footer {
   .influencer-list li {
     font-size: 1.2em;
     margin: 5px 0 5px 0; }
+
+.thinking-background {
+  z-index: -1;
+  position: absolute;
+  background-color: #FFF200;
+  width: calc(100% - 100px);
+  height: calc(100% - 100px);
+  margin: 0 50px 0 50px; }
 
 /*# sourceMappingURL=style.css.map */
