--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -17,6 +17,7 @@ $browser-context: 16;
 
 $body-font: 'Futura Light';
 $header-font: 'Harriet Bold';
+$header-height: 100px;
 $img-path: '../imgs/';
 $logo-dark: 'TAG_logo_tag_black_blacktag.png';
 $logo-light: 'TAG_white_1920x1080.png';
@@ -75,7 +76,8 @@ $xlarge-breakpoint: em(1920) !default;
 // }
 // @include respond-to(wide-screens) {
 // }
-html, body, header, main, footer {
+
+html, body, header, main {
 	overflow: hidden;
 	margin: 0 0 0 0;
 	box-sizing: border-box;
@@ -96,7 +98,7 @@ p {
 }
 
 
-header, main, footer {
+header, main {
 	position: fixed;
 	box-sizing: border-box;
 }
@@ -107,23 +109,11 @@ main {
 	width: 100%;
 	padding-top: 100px; //Header Height
 	padding-bottom: 100px;
-	@include respond-to(handhelds) {
-		padding-top: 150px; // Header Height on mobile
-	}
 }
 
 header { 
   width: 100%;
   height: 100px;
-  @include respond-to(handhelds) {
-  	height: 150px;
-  }
-}
-
-footer {
-	bottom: 0;
-	height: 100px;
-	width: 100%;
 }
 
 .background {
@@ -147,6 +137,117 @@ footer {
 	}
 	&--strategy {
 		background-image: url($img-path + $strategy-bg);
+	}
+}
+
+.inner-container {
+	@include center;
+	clear: both;
+	background-color: purple;
+	@include respond-to(handhelds) {
+	}
+	@include respond-to(medium-screens) {
+		width: 960px;
+		height: 470px;
+	}
+	@include respond-to(wide-screens) {
+		width: 1440px;
+		height: 720px;
+	}
+}
+
+.media {
+	display: inline-block;
+	// clear: top;
+	// position: relative;
+	// float: right;
+	background-color: blue;
+	height: calc(100% - 20px);
+	width: calc(60% - 20px);
+	margin: 10px 10px 10px 10px;
+}
+
+.copy {
+	clear: both;
+	float: left;
+	height: calc(80% - 20px); // Minus margins
+	width: calc(40% - 60px); // Minus margins
+	background-color: blue;
+	margin: 10px 50px 10px 10px;
+	h1 {
+		font-size: 2.7em;
+		margin: 0 0 30px 0;
+	}
+	h2 {
+		margin: 60px 0 0 0;
+	}
+	p {
+		margin: 0 0 30px 0;
+	}
+	@include respond-to(handhelds) {
+		// To Add mobile styles when Rosa completes them
+	}
+	@include respond-to(medium-screens) {
+	}
+	@include respond-to(wide-screens) {
+		font-size: 1.2em;
+	}
+	&--light {
+		color: white;
+	}
+}
+
+.icons {
+	clear: both;
+	background-color: blue;
+	float: left;
+	// position: relative;
+	width: calc(40% - 60px); // Minus margins
+	height: calc(20% - 10px); // Minus margins
+	margin: 0 50px 10px 10px;
+	@include respond-to(handhelds) {
+		// To Add mobile styles when Rosa completes them
+	}
+	@include respond-to(medium-screens) {
+	}
+	@include respond-to(wide-screens) {
+	}
+	&__icon {
+		float: left;
+		width: 15%;
+		padding-bottom: 15%;
+	}
+	&__image {
+		width: 100%;
+		padding-bottom: 100%;
+		// height: 100%;
+		background-size: contain;
+		background-position: left;
+		background-repeat: no-repeat;
+		transition-duration: 1s;
+		&--home {
+			background-image: url($img-path + $home-icon);
+			&:hover {
+				-ms-transform: rotate(180deg); /* IE 9 */
+			    -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+			    transform: rotate(180deg);
+			}
+			&--light {
+				background-image: url($img-path + $home-icon-light);
+			}
+		}
+	}
+	&__text {
+		text-transform: uppercase;
+		font-family: 'Futura';
+		font-weight: bold;
+		width: 100%;
+		text-align: center;
+		top: 100%;
+		margin: 10px 0 0 0;
+	}
+	&--light {
+		color: white;
 	}
 }
 
@@ -357,87 +458,6 @@ footer {
 	}
 }
 
-.copy {
-	float: right;
-	height: 90%;
-	margin: 0 40px 0 0;
-	h1 {
-		font-size: 2.7em;
-		margin: 0 0 30px 0;
-	}
-	h2 {
-		margin: 60px 0 0 0;
-	}
-	p {
-		margin: 0 0 30px 0;
-	}
-	@include respond-to(handhelds) {
-		// To Add mobile styles when Rosa completes them
-	}
-	@include respond-to(medium-screens) {
-		width: 350px;
-	}
-	@include respond-to(wide-screens) {
-		width: 450px;
-		font-size: 1.2em;
-	}
-	&--light {
-		color: white;
-	}
-}
-
-.icons {
-	float: right;
-	position: relative;
-	height: 10%;
-	margin: 0 40px 0 0;
-	@include respond-to(handhelds) {
-		// To Add mobile styles when Rosa completes them
-	}
-	@include respond-to(medium-screens) {
-		width: 350px;
-	}
-	@include respond-to(wide-screens) {
-		width: 450px;
-	}
-	&__icon {
-		float: left;
-		width: 15%;
-		padding-bottom: 15%;
-	}
-	&__image {
-		width: 100%;
-		padding-bottom: 100%;
-		// height: 100%;
-		background-size: contain;
-		background-position: left;
-		background-repeat: no-repeat;
-		transition-duration: 1s;
-		&--home {
-			background-image: url($img-path + $home-icon);
-			&:hover {
-				-ms-transform: rotate(180deg); /* IE 9 */
-			    -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
-			    transform: rotate(180deg);
-			}
-			&--light {
-				background-image: url($img-path + $home-icon-light);
-			}
-		}
-	}
-	&__text {
-		text-transform: uppercase;
-		font-family: 'Futura';
-		font-weight: bold;
-		width: 100%;
-		text-align: center;
-		top: 100%;
-		margin: 10px 0 0 0;
-	}
-	&--light {
-		color: white;
-	}
-}
 
 .production-videos {
 	float: left;
@@ -491,5 +511,12 @@ footer {
 	}
 }
 
-
-
+.thinking-background {
+	z-index: -1;
+	position: absolute;
+	background-color: $yellow;
+	width: calc(100% - 100px);
+	// height: 100%;
+	height: calc(100% - 100px);
+	margin: 0 50px 0 50px;
+}
